--- a/css/style.css
+++ b/css/style.css
@@ -594,6 +594,7 @@ header {
 .overlay .title {
     font-size: 1.3rem;
     font-weight: 700;
+    padding-top: 20px;
     text-shadow: 2px 0 0 var(--primary-color), -2px 0 0 var(--primary-color), 0 2px 0 var(--primary-color), 0 -2px 0 var(--primary-color), 1px 1px var(--primary-color), -1px -1px 0 var(--primary-color), 1px -1px 0 var(--primary-color), -1px 1px 0 var(--primary-color);
 }
 
